--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
+    "axios": "^0.19.0",
+    "axios-observable": "^1.1.2",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "rxjs": "^6.5.2",
     "typescript": "3.5.3"
   },
   "scripts": {
