--- a/jestconfig.json
+++ b/jestconfig.json
@@ -3,6 +3,7 @@
     "^.+\\.(t|j)sx?$": "ts-jest"
   },
   "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+  "modulePathIgnorePatterns": ["sample"],
   "moduleFileExtensions": [
     "ts",
     "tsx",
