--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "reactivehooks",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "Reactive Extensions helpers for React Hooks",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -25,32 +25,32 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "@types/enzyme": "^3.10.3",
-        "@types/enzyme-adapter-react-16": "^1.0.5",
-        "@types/jest": "24.0.16",
-        "@types/node": "12.6.9",
+        "typescript": "3.5.3",
         "@types/react": "16.8.24",
-        "@types/react-dom": "16.8.5",
-        "axios": "^0.19.0",
-        "axios-observable": "^1.1.2",
-        "enzyme": "^3.10.0",
-        "enzyme-adapter-react-16": "^1.14.0",
-        "node-sass": "^4.12.0",
         "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-scripts": "3.0.1",
-        "rxjs": "^6.5.2",
-        "typescript": "3.5.3"
+        "rxjs": "^6.5.2"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/lucasteles/reactivehooks"
     },
     "devDependencies": {
+        "@types/enzyme": "^3.10.3",
+        "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/jest": "24.0.16",
+        "@types/node": "12.6.9",
+        "@types/react-dom": "16.8.5",
         "coveralls": "^3.0.3",
         "jest": "^23.6.0",
         "ts-jest": "^23.10.4",
         "tslint": "^5.18.0",
-        "tslint-react": "^4.0.0"
+        "tslint-react": "^4.0.0",
+        "axios": "^0.19.0",
+        "axios-observable": "^1.1.2",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0",
+        "node-sass": "^4.12.0",
+        "react-dom": "^16.8.6",
+        "react-scripts": "3.0.1"
     }
 }
