--- a/package.json
+++ b/package.json
@@ -35,22 +35,24 @@
         "url": "https://github.com/lucasteles/reactivehooks"
     },
     "devDependencies": {
-        "@types/enzyme": "^3.10.3",
+        "@testing-library/react": "^10.0.2",
+        "@testing-library/react-hooks": "^3.2.1",
         "@types/enzyme-adapter-react-16": "^1.0.5",
-        "@types/jest": "24.0.16",
-        "@types/node": "12.6.9",
+        "@types/jest": "25.2.1",
+        "@types/node": "13.11.1",
         "@types/react-dom": "16.8.5",
-        "coveralls": "^3.0.3",
-        "jest": "^23.6.0",
-        "ts-jest": "^23.10.4",
-        "tslint": "^5.18.0",
-        "tslint-react": "^4.0.0",
+        "@types/testing-library__react": "^10.0.1",
+        "@types/testing-library__react-hooks": "^3.2.0",
         "axios": "^0.19.0",
         "axios-observable": "^1.1.2",
-        "enzyme": "^3.10.0",
+        "coveralls": "^3.0.11",
         "enzyme-adapter-react-16": "^1.14.0",
-        "node-sass": "^4.12.0",
+        "jest": "^25.3.0",
+        "node-sass": "^4.13.1",
         "react-dom": "^16.8.6",
-        "react-scripts": "3.0.1"
+        "react-scripts": "3.0.1",
+        "ts-jest": "^25.3.1",
+        "tslint": "^6.1.1",
+        "tslint-react": "^4.2.0"
     }
 }
