--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,11 @@
         "esModuleInterop": true,
     },
     "include": [
-        "src"
+        "src",
     ],
     "exclude": [
         "node_modules",
         "**/__tests__/*",
-        "**/*.spec.*"
+        // "**/*.spec.*"
     ]
 }
