--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "jest --config jestconfig.json --coverage",
         "cover": "jest --config jestconfig.json --ci --coverage && cat ./coverage/lcov.info | coveralls",
         "build": "tsc",
-        "lint": "tslint --project tslint.json",
+        "lint": "eslint -c .eslintrc.js ./src/**/*.{js,ts,jsx,tsx}",
         "prepare": "npm run build",
         "prepublishOnly": "npm test && npm run lint",
         "preversion": "npm run lint",
@@ -25,10 +25,10 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "typescript": "3.5.3",
         "@types/react": "16.8.24",
         "react": "^16.8.6",
-        "rxjs": "^6.5.2"
+        "rxjs": "^6.5.2",
+        "typescript": "3.5.3"
     },
     "repository": {
         "type": "git",
@@ -37,22 +37,23 @@
     "devDependencies": {
         "@testing-library/react": "^10.0.2",
         "@testing-library/react-hooks": "^3.2.1",
-        "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/jest": "25.2.1",
         "@types/node": "13.11.1",
         "@types/react-dom": "16.8.5",
         "@types/testing-library__react": "^10.0.1",
         "@types/testing-library__react-hooks": "^3.2.0",
+        "@typescript-eslint/eslint-plugin": "^2.28.0",
+        "@typescript-eslint/parser": "^2.28.0",
         "axios": "^0.19.0",
         "axios-observable": "^1.1.2",
         "coveralls": "^3.0.11",
         "enzyme-adapter-react-16": "^1.14.0",
+        "eslint": "^6.8.0",
+        "eslint-plugin-react": "^7.19.0",
         "jest": "^25.3.0",
         "node-sass": "^4.13.1",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1",
-        "ts-jest": "^25.3.1",
-        "tslint": "^6.1.1",
-        "tslint-react": "^4.2.0"
+        "ts-jest": "^25.3.1"
     }
 }
